Fonts added. New colour pallette added. NavBar tweaked to prevent overlap at the breakpoints

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,29 +4,44 @@
     box-sizing: border-box;
 }
 
+h2 {
+    font-family: 'Fjalla One', 'sans-serif';
+    color: #7F675B;
+}
+
+p {
+    font-family: 'Cantarell', 'sans-serif';
+    font-weight: 400;
+    color: #462255;
+}
+
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    background-color:  #551A8B;
+    background-color:  #9D75CB;
 }
 
 .logo {
-    color:rgb(204, 204, 204);
+    color:#EEF0F2;
     text-transform: uppercase;
+    font-family: 'Fjalla One', 'sans-serif';
     letter-spacing: 2px;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .nav-links {
     display: flex;
+    font-family: 'Cantarell', 'sans-serif';
+    font-weight: 700;
+    font-size: 14px;
     justify-content: space-around;
-    width: 75%;
+    width: 80%;
 }
 
 .nav-links a{
-    color:rgb(204, 204, 204);
+    color:#EEF0F2;
     text-decoration: none;
     letter-spacing: 1px;
     font-weight: bold;
@@ -34,7 +49,7 @@ nav {
 }
 
 .nav-links a:hover{
-    color: rgb(125, 219, 125);
+    color: #C6C7C4;
 }
 
 .nav-links li{
@@ -48,14 +63,14 @@ nav {
 .burger div{
     width: 25px;
     height: 3px;
-    background-color:rgb(204, 204, 204);
+    background-color:#EEF0F2;
     margin: 5px;
 }
 
 .main-container{
     width: 100vw;
     height: 92vh;
-    background-color: rgb(196, 252, 196);
+    background-color: #EEF0F2;
     padding-top: 10px;
     padding-left: 15%;
     padding-right: 15%;
@@ -66,6 +81,7 @@ nav {
     body{
         /* hide overflow of nav-links unselected */
         overflow-x: hidden;
+        text-align: center;
     }
    .nav-links{
        position: absolute;
@@ -77,7 +93,7 @@ nav {
        height:92vh;
        /* ensure it rests under the height of nav */
        top: 8vh;
-       background-color:  #551A8B;
+       background-color:  #9D75CB;
        /* remove from the page */
        transform: translateX(100%);
        transition: transform 0.5s ease-in;
@@ -101,4 +117,8 @@ nav {
 
 .nav-active{
     transform: translateX(0%);
+}
+
+.profile_pic {
+    border-radius: 50%;
 }
